--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -48,13 +48,13 @@
 		<div class="inner">
 			<img src="assets/images/logo_white.png" />
 			<ul>
-				<li><a id="1">services</a></li>
-				<li><a id="2">technologies</a></li>
-				<li><a id="3">showtime</a></li>
-				<li><a id="4">about us</a></li>
-				<li><a id="5">meet 'n greet</a></li>
-				<li><a id="6">get in touch</a></li>
-				<li><a id="7">join us</a></li>
+				<li><a href="#services" id="1">services</a></li>
+				<li><a href="#technologies" id="2">technologies</a></li>
+				<li><a href="#showtime" id="3">showtime</a></li>
+				<li><a href="#about" id="4">about us</a></li>
+				<li><a href="#team" id="5">meet 'n greet</a></li>
+				<li><a href="#contact" id="6">get in touch</a></li>
+				<li><a href="#career" id="7">join us</a></li>
 			</ul>
 			<button>&#160;</button>
 		</div>
@@ -293,25 +293,46 @@
 		</section>
 
 		<section id="contact">
+
 			<div class="inner">
+
 				<h1>Get in touch</h1>
 				<div class="line"></div>
 				<article class="full">
-					<form id="registration" method="post" action=".">
-						<fieldset>
-							<label for="title">Your title</label>
-							<input type="text" name="title" id="title" title="title" placeholder="" />
-							<label for="name">Your name</label>
-							<input type="text" name="name" id="name" title="name" placeholder="" />
-							<label for="email">Your eMail</label>
-							<input type="email" name="email" id="email" title="email" placeholder="" />
-							<label for="msg">Your Message</label>
-							<textarea name="msg" rows="5" placeholder=""></textarea>
-						</fieldset>
-						<fieldset>
-							<button id="done">send</button>
-						</fieldset>
-					</form>
+
+					<?php include "inc/validation.php"; ?>
+
+					<?php if(!empty($errors) || empty($_POST)) { ?>
+						<ul class="errorlist">
+						<?php foreach($errors AS $error) { ?>
+							<li><?= $error; ?></li>
+						<?php } ?>
+						</ul>
+
+						<form id="form-contact" method="post" action="index.html#contact">
+							<fieldset>
+								<label for="title">Your title</label>
+								<input type="text" name="title" id="title" title="title" value="<?php echo htmlspecialchars($_POST['title'], ENT_QUOTES, 'UTF-8'); ?>" placeholder="" />
+								<label for="name">Your name</label>
+								<input type="text" name="name" id="name" title="name" value="<?php echo htmlspecialchars($_POST['name'], ENT_QUOTES, 'UTF-8'); ?>" placeholder="" />
+								<label for="email">Your eMail</label>
+								<input type="email" name="email" id="email" title="email" value="<?php echo htmlspecialchars($_POST['email'], ENT_QUOTES, 'UTF-8'); ?>" placeholder="" />
+								<label for="msg">Your Message</label>
+								<textarea name="msg" id="msg" rows="5" placeholder=""><?php echo htmlspecialchars($_POST['message'], ENT_QUOTES, 'UTF-8'); ?></textarea>
+							</fieldset>
+
+							<fieldset>
+								<button id="done">send</button>
+							</fieldset>
+
+						</form>
+
+					<?php } else { ?>
+
+						<p><?= $json['message']; ?></p>
+
+					<?php } ?>
+
 				</article>
 			</div>
 		</section>
