CSS Phone Portrait

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -156,7 +156,7 @@
 			</div>
 		</section>
 
-		<section id="showtime">
+		<!-- section id="showtime">
 			<div class="inner">
 				<h1>Showtime</h1>
 				<div class="line"></div>
@@ -194,7 +194,7 @@
 					</ul>
 				</nav>
 			</div>
-		</section>
+		</section -->
 
 		<section id="about">
 			<div class="inner">
