--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -15,9 +15,6 @@
 	<meta name="robots" content="index, follow">
 	<meta http-equiv=”content-style-type” content=”text/css” />
 	<meta http-equiv=”content-script-type” content=”text/javascript” />
-	<!-- link rel=”canonical” href=”#” />
-	<meta name=”syndication-source” content=”#” />
-	<meta name=”original-source” content=”#” / -->
 
 	<!-- Page Settings -->
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -27,6 +24,7 @@
 	<meta http-equiv="expires" content="Tue, 01 Dec 2020 00:00:00 GMT">
 	<meta name=”allow-search” content=”yes” />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<link rel="shortcut icon" href="assets/images/favicon.ico">
 
 	<!-- Includes -->
 
