--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -25,6 +25,9 @@
 	<meta name=”allow-search” content=”yes” />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="shortcut icon" href="assets/images/favicon.ico">
+	<div class="icon" type="touch" rel="apple-touch-icon-precomposed" media="screen and (resolution: 132dpi)" href="assets/images/bookmark-132.png" />
+	<div class="icon" type="touch" rel="apple-touch-icon-precomposed" media="screen and (resolution: 163dpi)" href="assets/images/bookmark-163.png" />
+	<div class="icon" type="touch" rel="apple-touch-icon-precomposed" media="screen and (resolution: 326dpi)" href="assets/images/bookmark-236.png" />
 
 	<!-- Includes -->
 
