Final version 1.0 beta

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -49,13 +49,13 @@
 		<div class="inner">
 			<img src="assets/images/logo_white.png" />
 			<ul>
-				<li><a href="#services" id="1">services</a></li>
-				<li><a href="#technologies" id="2">technologies</a></li>
-				<li><a href="#showtime" id="3">showtime</a></li>
-				<li><a href="#about" id="4">about us</a></li>
-				<li><a href="#team" id="5">meet 'n greet</a></li>
-				<li><a href="#contact" id="6">get in touch</a></li>
-				<li><a href="#career" id="7">join us</a></li>
+				<li><a href="#services">services</a></li>
+				<li><a href="#technologies">technologies</a></li>
+				<!--<li><a href="#showtime">showtime</a></li>-->
+				<li><a href="#about">about us</a></li>
+				<li><a href="#team">meet 'n greet</a></li>
+				<li><a href="#contact">get in touch</a></li>
+				<li><a href="#career">join us</a></li>
 			</ul>
 			<button>&#160;</button>
 		</div>
@@ -157,7 +157,8 @@
 			</div>
 		</section>
 
-		<!-- section id="showtime">
+		<!--
+		<section id="showtime">
 			<div class="inner">
 				<h1>Showtime</h1>
 				<div class="line"></div>
@@ -195,7 +196,8 @@
 					</ul>
 				</nav>
 			</div>
-		</section -->
+		</section>
+		-->
 
 		<section id="about">
 			<div class="inner">
