--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -69,7 +69,7 @@
 				<div class="line"></div>
 				<h1>Everything<br /> is connected</h1>
 				<h2>You connect, too.</h2>
-				<a href="#">Find out more <img src="assets/images/ic_start_a_arrow.png" /></a>
+				<!-- a href="#">Find out more <img src="assets/images/ic_start_a_arrow.png" /></a -->
 				<div class="slider">
 					<div class="third">
 						<div class="tab red">
