Menu highlighting on scroll

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -74,7 +74,7 @@
 					<div class="third">
 						<div class="tab red">
 							SERVICES
-						</div>
+						</div>	
 						<div class="box red">
 							<img src="assets/images/ic_start_tab_1.png" class="box-img" />
 							<div class="line"></div><br />
@@ -84,7 +84,7 @@
 					</div>
 					<div class="third">
 						<div class="tab blue">
-							ABOUT US
+								ABOUT US
 						</div>
 						<div class="box blue">
 							<img src="assets/images/ic_start_tab_2.png" class="box-img" />
@@ -243,13 +243,13 @@
 					<a id="btn-manuel" title="manuel" class="roll">
 						<span data-title="meet manuel">
 							<h1>MANUEL</h1>
-							<h2>Technical Affaires</h2>
+							<h2>Technical Affairs</h2>
 						</span>
 					</a>
 					<a id="btn-igor" title="igor" class="roll">
 						<span data-title="meet igor">
 							<h1>IGOR</h1>
-							<h2>Operations & Sales</h2>
+							<h2>Operations &amp; Sales</h2>
 						</span>
 					</a>
 				</menu>
