Added REST to technologies

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -141,7 +141,7 @@
 					<img src="assets/images/img_cubes.png" />
 					<ul>
 						<li>Web Programming: HTML5, HbbTV, CSS, JavaScript, jQuery or XSLT</li>
-						<li>System Scalability: WebSockets, Node.js, PHP, API building</li>
+						<li>System Scalability: Node.js, PHP, WebSockets, REST, API building</li>
 						<li>CMS Platforms: TYPO3, Drupal, Joomla, Wordpress and Silverstripe CMS platforms</li>
 						<li>Multichannel and responsive technologies: TV, mobile, tablet devices, desktops, navigation, game consoles, and more</li>
 					</ul>
