Bookmark Icon Fix and Splash Screen

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -20,9 +20,8 @@
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 
 	<link rel="shortcut icon" href="assets/images/favicon.ico">
-	<div class="icon" type="touch" rel="apple-touch-icon-precomposed" media="screen and (resolution: 132dpi)" href="assets/images/bookmark-132.png" />
-	<div class="icon" type="touch" rel="apple-touch-icon-precomposed" media="screen and (resolution: 163dpi)" href="assets/images/bookmark-163.png" />
-	<div class="icon" type="touch" rel="apple-touch-icon-precomposed" media="screen and (resolution: 326dpi)" href="assets/images/bookmark-236.png" />
+	<link rel="apple-touch-icon-precomposed" href="assets/images/bookmark.png" />
+	<link rel="apple-touch-startup-image" href="assets/images/splashscreen.png" />
 
 	<!-- css -->
 	<link rel="stylesheet" media="all" href="assets/css/global.css" />
@@ -67,7 +66,7 @@
 					<div class="third">
 						<div class="tab red">
 							SERVICES
-						</div>	
+						</div>
 						<div class="box red">
 							<img src="assets/images/ic_start_tab_1.png" class="box-img" />
 							<div class="line"></div><br />
@@ -407,8 +406,8 @@ _gaq.push(['_trackPageview']);
 _gaq.push(['_gat._anonymizeIp']);
 
 (function() {
-	var ga = document.createElement('script'); 
-	ga.type = 'text/javascript'; 
+	var ga = document.createElement('script');
+	ga.type = 'text/javascript';
 	ga.async = true;
 	ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
 	var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
