Anchor an logo gepackt

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -38,7 +38,7 @@
 
 	<header>
 		<div class="inner">
-			<img src="assets/images/logo_white.png" />
+			<a href="#start"><img src="assets/images/logo_white.png" /></a>
 			<ul>
 				<li><a href="#services">services</a></li>
 				<li><a href="#technologies">technologies</a></li>
