--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -20,9 +20,11 @@
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 
 	<link rel="shortcut icon" href="assets/images/favicon.ico">
-	<div class="icon" type="touch" rel="apple-touch-icon-precomposed" media="screen and (resolution: 132dpi)" href="assets/images/bookmark-132.png" />
-	<div class="icon" type="touch" rel="apple-touch-icon-precomposed" media="screen and (resolution: 163dpi)" href="assets/images/bookmark-163.png" />
-	<div class="icon" type="touch" rel="apple-touch-icon-precomposed" media="screen and (resolution: 326dpi)" href="assets/images/bookmark-236.png" />
+	<link rel="apple-touch-icon" href="assets/images/bookmark-132.png" />
+	<!--
+	<link rel="apple-touch-icon" sizes="72x72" href="assets/images/bookmark-ipad.png" />
+	<link rel="apple-touch-icon" sizes="114x114" href="assets/images/bookmark-retina.png" />
+	-->
 
 	<!-- css -->
 	<link rel="stylesheet" media="all" href="assets/css/global.css" />
@@ -30,8 +32,9 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/tablet.css" media="all and (min-width: 768px) and (max-width: 1024px)" />
 	<link rel="stylesheet" type="text/css" href="assets/css/desktop.css" media="all and (min-width: 1025px)" />
 
-	<!-- js -->
-	<script src="assets/js/jquery.1.8.js"></script>
+	<!-- js -->	
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js" type="text/javascript"></script>
+	<script>window.jQuery || document.write('<script src="assets/js/jquery-1.8.2.min.js"><\/script>')</script>
 	<script src="assets/js/global.js"></script>
 
 </head>
