--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -21,7 +21,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 
 	<link rel="shortcut icon" href="assets/images/favicon.ico">
-	<link rel="apple-touch-icon" href="assets/images/bookmark-132.png" />
+	<link rel="apple-touch-icon" href="assets/images/bookmark.png" />
 	<!--
 	<link rel="apple-touch-icon" sizes="72x72" href="assets/images/bookmark-ipad.png" />
 	<link rel="apple-touch-icon" sizes="114x114" href="assets/images/bookmark-retina.png" />
@@ -33,7 +33,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/tablet.css" media="all and (min-width: 768px) and (max-width: 1024px)" />
 	<link rel="stylesheet" type="text/css" href="assets/css/desktop.css" media="all and (min-width: 1025px)" />
 
-	<!-- js -->	
+	<!-- js -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js" type="text/javascript"></script>
 	<script>window.jQuery || document.write('<script src="assets/js/jquery-1.8.2.min.js"><\/script>')</script>
 	<script src="assets/js/global.js"></script>
@@ -356,6 +356,8 @@
 				<h1>everything is<br /> connected</h1>
 				<h2>you, too?</h2>
 			</div>
+			<canvas id="world"></canvas>
+			<script src="assets/js/wave.js"></script>
 		</section>
 
 		<footer>
